added app.js and main.css

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,18 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://d3js.org/d3.v4.js"></script>
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="img/favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+  <meta property="og:image" content="http://www.flipsidetalk.com/img/handshake.jpg"/>
+  <meta name="description" content="Creating civil discourse by presenting curated articles from different viewpoints.">
+  <meta property="og:title" content="Flipside — A new side of news" />
+  <!-- Bootstrap core CSS -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <!--materialdc -->
+  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
+  <!-- Custom styles -->
+  <link href="styles/main.css" rel="stylesheet">
+  <title>jason</title>
 </head>
 
 <body>
-
-
-  <div class="jumbotron text-center">
-    <div class="container">
-
-      <h1>Hi Helen</h1>
+  <!--BEGIN CONTENT BODY-->
+  <div class="container content article-top">
+    <div class="section-content u-maxWidth1200 u-paddingRight20 u-paddingLeft20">
+      <div class="row">
+        <div class="col-md-12">
+          <p>Hello I'm Jason</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-7">
+          <p>im a stuent of product design, uchicago economics, and computer science</p>
+        </div>
+      </div>
     </div>
   </div>
 
 
+  <!-- JQuery and Bootstrap core JS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <!-- Firebase script -->
+  <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
+
+  <!--
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.10.8/esm/popper-utils.js"></script>
+-->
+<!--vue.js scripts-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.js"></script>
+<script src="scripts/app.js"></script>
+
+<script>
+// Google Analytics
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-97371368-1', 'auto');
+ga('send', 'pageview');
+
+</script>
 </body>
 </html>
