work section and intro section

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -39,21 +39,69 @@
 
 <body>
   <!--BEGIN CONTENT BODY-->
-  <div class="container content article-top">
-    <div class="section-content u-maxWidth1200 u-paddingRight20 u-paddingLeft20">
+  <div class="container u-textLower">
+    <div class="intro-section u-maxWidth900">
       <div class="row">
-        <div class="col-md-12">
-          <p>Hello I'm Jason</p>
+        <div class="col-sm-12">
+          <h1>Hi, I'm Jason</h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-7">
-          <p>im a stuent of product design, uchicago economics, and computer science</p>
+        <div class="col-md-8">
+          <h2>i'm a student of product design, uchicago economics, and computer science</h2>
+        </div>
+      </div>
+    </div>
+    <div class="work-section u-maxWidth900">
+      <div class="row">
+        <div class="col-sm-8">
+          <h3>my work</h3>
+
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-6 col-md-4 projectItem">
+
+          <div class="image">
+            <img src="img/iretron-logo-gray.png" alt="iretron" width="70%;">
+          </div>
+          <h5>iretron</h5>
+        </div>
+        <div class="col-xs-6 col-md-4 projectItem">
+          <div class="image">
+            <img src="img/uprospie-logo-gray.png" alt="uprospie" height="60%;">
+          </div>
+          <h5>uprospie</h5>
+        </div>
+        <div class="col-xs-6 col-md-4 projectItem">
+          <div class="image">
+            <img src="img/flipside-logo-gray.png" alt="uprospie" height="50%;">
+          </div>
+          <h5>flipside</h5>
+        </div>
+
+        <div class="col-xs-6 col-md-4 projectItem">
+          <div class="image">
+            <img src="img/ThinkCERCA-logo-gray.png" alt="uprospie" height="70%;">
+          </div>
+          <h5>thinkCERCA</h5>
+        </div>
+        <div class="col-xs-6 col-md-4 projectItem">
+          <div class="image">
+            <img src="img/oca-logo-gray.png" alt="uprospie" height="90%">
+          </div>
+          <h5>OCA Ventures</h5>
+        </div>
+        <div class="col-xs-6 col-md-4 projectItem">
+          <div class="image">
+            <img src="img/ampush-logo-gray.png" alt="uprospie" height="50%;">
+          </div>
+          <h5>Ampush</h5>
         </div>
       </div>
     </div>
   </div>
-
 
   <!-- JQuery and Bootstrap core JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
