--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -54,7 +54,7 @@
     </div>
     <div class="work-section u-maxWidth900">
       <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-8 title">
           <h3>my work</h3>
 
         </div>
