--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -40,7 +40,7 @@
 <body>
   <!--BEGIN CONTENT BODY-->
   <div class="container u-textLower">
-    <div class="intro-section u-maxWidth900">
+    <div class="intro-section section">
       <div class="row">
         <div class="col-sm-12">
           <h1>Hi, I'm Jason</h1>
@@ -48,11 +48,11 @@
       </div>
       <div class="row">
         <div class="col-md-8">
-          <h2>i'm a student of product design, uchicago economics, and computer science</h2>
+          <h2>student of uchicago economics, computer science, and product design</h2>
         </div>
       </div>
     </div>
-    <div class="work-section u-maxWidth900">
+    <div class="work-section section">
       <div class="row">
         <div class="col-sm-8 title">
           <h3>my work</h3>
@@ -83,7 +83,7 @@
 
         <div class="col-xs-6 col-md-4 projectItem">
           <div class="image">
-            <img src="img/ThinkCERCA-logo-gray.png" alt="uprospie" height="70%;">
+            <img src="img/thinkcerca-logo-gray.png" alt="uprospie" height="70%;">
           </div>
           <h5>thinkCERCA</h5>
         </div>
@@ -100,6 +100,43 @@
           <h5>Ampush</h5>
         </div>
       </div>
+    </div>
+
+    <div class="me-section section">
+      <div class="row">
+        <div class="col-sm-6">
+          <h2>me</h2>
+        </div>
+        <div class="col-sm-6">
+          <h3>I like meeting people, writing, taking pictures, and building things.</h3>
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="contact-section section">
+      <div class="row">
+        <div class="col-sm-6">
+          <h2>call me beep me</h2>
+        </div>
+        <div class="col-sm-6">
+          <form class="" action="index.html" method="post">
+            <div class="">
+              <div class="">
+
+              </div>
+              <input type="text" name="" value="">
+              <div class="">
+
+              </div>
+              <input type="text" name="" value="">
+            </div>
+          </form>
+        </div>
+
+      </div>
+
     </div>
   </div>
 
