--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -55,32 +55,37 @@
     <div class="work-section section">
       <div class="row">
         <div class="col-sm-8 title">
-          <h3>my work</h3>
-
+          <h3>projects (that got out of hand)</h3>
         </div>
       </div>
-
       <div class="row">
         <div class="col-xs-6 col-md-4 projectItem">
-
           <div class="image">
-            <img src="img/iretron-logo-gray.png" alt="iretron" width="70%;">
+            <img src="img/iretron-logo-gray.png" alt="iretron" width="50%;">
           </div>
-          <h5>iretron</h5>
+          <h5>iretron (2011)</h5>
         </div>
         <div class="col-xs-6 col-md-4 projectItem">
           <div class="image">
-            <img src="img/uprospie-logo-gray.png" alt="uprospie" height="60%;">
+            <img src="img/uprospie-logo-gray.png" alt="uprospie" height="55%;">
           </div>
-          <h5>uprospie</h5>
+          <h5>uprospie (2014)</h5>
         </div>
         <div class="col-xs-6 col-md-4 projectItem">
           <div class="image">
-            <img src="img/flipside-logo-gray.png" alt="uprospie" height="50%;">
+            <img src="img/flipside-logo-gray.png" alt="uprospie" height="40%;">
           </div>
-          <h5>flipside</h5>
+          <h5>flipside (2017)</h5>
         </div>
-
+      </div>
+    </div>
+    <div class="work-section section">
+      <div class="row">
+        <div class="col-sm-8 title">
+          <h3>real work</h3>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-xs-6 col-md-4 projectItem">
           <div class="image">
             <img src="img/thinkcerca-logo-gray.png" alt="uprospie" height="70%;">
@@ -102,6 +107,7 @@
       </div>
     </div>
 
+
     <div class="me-section section">
       <div class="row">
         <div class="col-sm-6">
@@ -110,28 +116,33 @@
         <div class="col-sm-6">
           <h3>I like meeting people, writing, taking pictures, and building things.</h3>
         </div>
-
       </div>
-
     </div>
+
+
+
 
     <div class="contact-section section">
       <div class="row">
-        <div class="col-sm-6">
-          <h2>call me beep me</h2>
+        <div class="col-md-5">
+          <h2>let's talk</h2>
         </div>
-        <div class="col-sm-6">
-          <form class="" action="index.html" method="post">
-            <div class="">
-              <div class="">
 
-              </div>
-              <input type="text" name="" value="">
-              <div class="">
-
-              </div>
+        <div class="col-md-7">
+          <form class="contactForm" action="index.html" method="post">
+            <div class="name inputGroup">
+              <label for="name">name: </label>
               <input type="text" name="" value="">
             </div>
+            <div class="email inputGroup">
+              <label for="email">email: </label>
+              <input type="email" name="" value="">
+            </div>
+            <div class="message inputGroup">
+              <label for="message">message: </label>
+              <textarea type="text" rows="4" name="" value=""></textarea>
+            </div>
+
           </form>
         </div>
 
