--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -55,7 +55,7 @@
     <div class="work-section section">
       <div class="row">
         <div class="col-sm-8 title">
-          <h3>projects (that got out of hand)</h3>
+          <h3>my work</h3>
         </div>
       </div>
       <div class="row">
@@ -63,29 +63,20 @@
           <div class="image">
             <img src="img/iretron-logo-gray.png" alt="iretron" width="50%;">
           </div>
-          <h5>iretron (2011)</h5>
+          <h5>iretron</h5>
         </div>
         <div class="col-xs-6 col-md-4 projectItem">
           <div class="image">
             <img src="img/uprospie-logo-gray.png" alt="uprospie" height="55%;">
           </div>
-          <h5>uprospie (2014)</h5>
+          <h5>uprospie</h5>
         </div>
         <div class="col-xs-6 col-md-4 projectItem">
           <div class="image">
             <img src="img/flipside-logo-gray.png" alt="uprospie" height="40%;">
           </div>
-          <h5>flipside (2017)</h5>
+          <h5>flipside</h5>
         </div>
-      </div>
-    </div>
-    <div class="work-section section">
-      <div class="row">
-        <div class="col-sm-8 title">
-          <h3>real work</h3>
-        </div>
-      </div>
-      <div class="row">
         <div class="col-xs-6 col-md-4 projectItem">
           <div class="image">
             <img src="img/thinkcerca-logo-gray.png" alt="uprospie" height="70%;">
@@ -107,6 +98,57 @@
       </div>
     </div>
 
+    <div class="work-section section">
+      <div class="row">
+        <div class="col-sm-8 title">
+          <h3>Non-profit</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-6 col-md-4 projectItem">
+          <div class="image">
+            <img src="img/thinkcerca-logo-gray.png" alt="uprospie" height="70%;">
+          </div>
+          <h5>moneythink</h5>
+        </div>
+        <div class="col-xs-6 col-md-4 projectItem">
+          <div class="image">
+            <img src="img/oca-logo-gray.png" alt="uprospie" height="90%">
+          </div>
+          <h5>edge launchpad</h5>
+        </div>
+        <div class="col-xs-6 col-md-4 projectItem">
+          <div class="image">
+            <img src="img/ampush-logo-gray.png" alt="uprospie" height="50%;">
+          </div>
+          <h5>enlighten chinese school</h5>
+        </div>
+      </div>
+    </div>
+
+    <div class="projectItem">
+      <h3 class="">
+        iReTron
+      </h3>
+      <h3 class="u-lighter">
+        iReTron is an e-commerce platform that refurbishes used electronics.
+      </h3>
+      <ul>
+        <li class="j-fontSize14"><b>Role:</b> Founder, 2011-</li>
+        <li><b>Things I learned:</b> HTML/CSS, PHP, SEO, Accounting, Customer Service, Marketing, B2B Sales </li>
+        <li><b>Watch our Shark Tank episode</b></li>
+      </ul>
+      <div class="fact">  </div>
+      <div class="fact"> <b>Role:</b> Founder, 2011- </div>
+      <div class="facts"> <b>Role:</b> Founder, 2011- </div>
+
+      <div class="">
+        lorem ipsum description
+      </div>
+    </div>
+
+
+
 
     <div class="me-section section">
       <div class="row">
@@ -118,6 +160,7 @@
         </div>
       </div>
     </div>
+
 
 
 
