--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -46,29 +46,6 @@
     </div>
   </div>
 
-
-  <aside id="my-mdc-dialog"
-  class="mdc-dialog"
-  role="alertdialog"
-  aria-labelledby="my-mdc-dialog-label"
-  aria-describedby="my-mdc-dialog-description">
-  <div class="mdc-dialog__surface">
-    <header class="mdc-dialog__header">
-      <h2 id="my-mdc-dialog-label" class="mdc-dialog__header__title">
-        Use Google's location service?
-      </h2>
-    </header>
-    <section id="my-mdc-dialog-description" class="mdc-dialog__body">
-      Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.
-    </section>
-    <footer class="mdc-dialog__footer">
-      <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Decline</button>
-      <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--accept">Accept</button>
-    </footer>
-  </div>
-  <div class="mdc-dialog__backdrop"></div>
-</aside>
-
   <!--BEGIN CONTENT BODY-->
   <div class="container u-textLower">
     <div class="intro-section section">
@@ -142,7 +119,7 @@
           <h3 class="company">ampush</h3>
           <p>
             Ampush is a Growth Marketing and Digital Strategy agency. I ran and analyzed native facebook ads for uber, eventbrite, and rdio.
-            
+
             OCA Ventures is a $250MM venture capital fund. I screened companies and am happy that a deal I screened actually got funding!
             I also made 2 kill calls during my time here and it was absolutely heartbreaking. 0/10 would not recommend.
           </p>
@@ -249,7 +226,101 @@
 
 
 
+    <style>
+    /* The Modal (background) */
+    .modal-content{
+      background-color: white;
+      bottom: 0;
+      box-shadow: 0.1rem 0.1rem 3rem rgba(0, 0, 0, 0.25);
+      color: black;
+      opacity: 1;
+      overflow-x: hidden;
+      overflow-y: scroll;
+      pointer-events: initial;
+      position: fixed;
+      right: 0;
+      width: 90rem;
+      top: 0;
+      z-index: 102;
+      display: block;
+      flex-wrap: wrap;
+    }
 
+    /* Modal Content */
+  /*  .modal-content {
+      padding-bottom: 3rem;
+      width: 95%;
+    } */
+
+    /* The Close Button */
+    .close {
+      color: #aaaaaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: #000;
+      text-decoration: none;
+      cursor: pointer;
+    }
+    </style>
+  </head>
+  <body>
+
+    <h2>Modal Example</h2>
+
+    <!-- Trigger/Open The Modal -->
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <div class="close">&times;</div><br>
+        <p>Some text in the Modal. aalsdjf lasjdf klasdj fklsad jfslkd jfkslad fjksld fjkls dajkls dj.</p><br><br><br><br><br>
+        <p>Some text in the Modal..</p><br><br><br><br><br>
+        <p>Some text in the Modal..</p><br><br><br><br><br>
+        <p>Some text in the Modal..</p><br><br><br><br><br>
+
+        <p>Some text in the Modal..</p><br><br><br><br><br>
+
+        <p>Some text in the Modal..</p><br><br><br><br><br>
+
+        <p>Some text in the Modal..</p><br><br><br><br><br>
+
+      </div>
+    </div>
+
+    <button id="myBtn">Open Modal</button>
+
+    <script>
+    // Get the modal
+    var modal = document.getElementById('myModal');
+
+    // Get the button that opens the modal
+    var btn = document.getElementById("myBtn");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks the button, open the modal
+    btn.onclick = function() {
+      modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+    </script>
 
     <div class="contact-section section">
       <div class="row">
