--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -61,6 +61,14 @@ p{
   background-color: rgba(199,199,199, 0.15); /* #C7C7C7 */
   justify-content: center;
   display: flex;
+  transition: ease-out 0.15s;
+  transition: ease-in 0.15s;
+}
+
+.image:hover{
+  background-color: rgba(199,199,199, 0); /* #C7C7C7 */
+  transition: ease-out 0.15s;
+  transition: ease-in 0.15s;
 }
 
 .projectItem{
@@ -114,7 +122,7 @@ textarea {
 
 
 textarea:focus, input:focus{
-    outline: none;
+  outline: none;
 }
 
 .name{
@@ -137,6 +145,45 @@ textarea:focus, input:focus{
 /*************************
 MODAL CONTENT
 *************************/
+/* The Modal (background) */
+.modal-content{
+  background-color: white;
+  bottom: 0;
+  border-radius: 0.2em;
+  border: 0px;
+  opacity: 1;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  pointer-events: initial;
+  position: fixed;
+  right: 0;
+  width: 70rem;
+  top: 0;
+  z-index: 102;
+  display: block;
+  flex-wrap: wrap;
+
+}
+
+.myModal{
+  /*background-color: #b2ebf2; */
+  background-color: rgba(255,255,255, 0.5);
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 .modal-dialog{
   width: 750px;
@@ -147,17 +194,107 @@ MODAL CONTENT
 .modal-content{
   padding: 20px;
 }
-
+.content-section{
+  padding: 20px;
+}
 .fade{
   background: none;
 }
 
+.commentBlock{
+  border-radius: 0.5em;
+  margin-top: 20px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
+.agreeBlock{
+  background-color: rgba(104, 207, 174, 1);
+  color: white;
+}
+.disagreeBlock{
+  background-color: rgba(235, 115, 115, 0.9);
+  color: white;
+}
+.commentHeader{
+  padding: 10px;
+  font-weight: bolder;
+}
+
+.quoteSection{
+  box-shadow:0px 2px 0px #a9a9a9;
+  padding-top:0px!important;
+  padding-bottom: 20px;
+}
+
+.commentSection{
+  padding: 0 20px;
+  color: white;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+}
+.rowReverse{
+  display: flex;
+  flex-direction: row-reverse;
+  padding-top: 20px;
+}
+.commentName{
+  padding-right: 10px;
+}
+.commentContent{
+  padding-left: 10px;
+}
+.commentText{
+  font-size: 16px;
+}
+.talkButton{
+    -webkit-border-radius: 4;
+    -moz-border-radius: 4;
+    border-radius: 7px;
+    color: #ffffff;
+    font-size: 16px;
+    background: rgba(0, 151, 167, 0.74);
+    padding: 6px 12px 9px 12px;
+    text-decoration: none;
+}
+.u-floatRight{
+  float: right;
+}
+
+.seeMoreButton{
+  -webkit-border-radius: 7;
+  -moz-border-radius: 7;
+  border-radius: 7px;
+  color: #ffffff;
+  font-size: 16px;
+  background: #6cccae;
+  padding: 5px 10px 5px 10px;
+  border: solid #ffffff 2px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: #5cad91;
+  text-decoration: none;
+}
 
 @media(max-width:991px){
-.modal{
-  width: 90%;
+  .modal{
+    width: 95%;
+  }
+  .modal-content{
+    width: 95%!important;
+  }
 }
-.modal-content{
-  width: 90%!important;
-}
+
+@media(max-width:768px){
+  .content-section{
+    padding: 0px;
+  }
+  .commentText{
+    font-size: 15px;
+    line-height: 1.4em;
+  }
 }
