--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -37,17 +37,8 @@
   <title>jason</title>
 </head>
 
-<body>
-  <div class="modal fade" id="cluster-map-modal" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <p>hello there</p>
-      </div>
-    </div>
-  </div>
-
-  <!--BEGIN CONTENT BODY-->
-  <div class="container u-textLower">
+<body>  <!--BEGIN CONTENT BODY-->
+  <div class="container u-textLower"  id="intro">
     <div class="intro-section section">
       <div class="row">
         <div class="col-sm-12">
@@ -60,6 +51,7 @@
         </div>
       </div>
     </div>
+
     <div class="work-section section">
       <div class="row">
         <div class="col-sm-8 title">
@@ -68,12 +60,51 @@
       </div>
       <div class="row">
         <div class="col-xs-12 col-sm-4 projectItem">
-          <a href="#my-mdc-dialog" data-toggle="dialog">
             <div class="image">
               <img src="img/iretron-logo-gray.png" alt="iretron" width="50%;">
             </div>
-          </a>
+            <h5 class="projectLabel">iretron</h5>
         </div>
+        <div class="col-xs-6 col-md-4 projectItem">
+          <div class="image">
+            <img src="img/uprospie-logo-gray.png" alt="uprospie" height="55%;">
+          </div>
+          <h5 class="projectLabel">uprospie</h5>
+        </div>
+        <div class="col-xs-6 col-md-4 projectItem">
+          <div class="image">
+            <img src="img/flipside-logo-gray.png" alt="uprospie" height="40%;">
+          </div>
+          <h5 class="projectLabel">flipside</h5>
+        </div>
+        <div class="col-xs-6 col-md-4 projectItem">
+          <div class="image">
+            <img src="img/thinkcerca-logo-gray.png" alt="uprospie" height="70%;">
+          </div>
+          <h5 class="projectLabel">thinkCERCA</h5>
+        </div>
+        <div class="col-xs-6 col-md-4 projectItem">
+          <div class="image">
+            <img src="img/oca-logo-gray.png" alt="uprospie" height="90%">
+          </div>
+          <h5 class="projectLabel">OCA Ventures</h5>
+        </div>
+        <div class="col-xs-6 col-md-4 projectItem">
+          <div class="image">
+            <img src="img/ampush-logo-gray.png" alt="uprospie" height="50%;">
+          </div>
+          <h5 class="projectLabel">Ampush</h5>
+        </div>
+      </div>
+    </div>
+
+    <div class="work-section section">
+      <div class="row">
+        <div class="col-sm-8 title">
+          <h3>Non-profit</h3>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-sm-8">
           <h3 class="company">iretron</h3>
           <p>
@@ -124,95 +155,8 @@
             I also made 2 kill calls during my time here and it was absolutely heartbreaking. 0/10 would not recommend.
           </p>
         </div>
-
-
-      </div>
-      <div class="row">
-        <div class="col-xs-6 col-md-4 projectItem">
-          <div class="image">
-            <img src="img/uprospie-logo-gray.png" alt="uprospie" height="55%;">
-          </div>
-          <h5>uprospie</h5>
-        </div>
-        <div class="col-xs-6 col-md-4 projectItem">
-          <div class="image">
-            <img src="img/flipside-logo-gray.png" alt="uprospie" height="40%;">
-          </div>
-          <h5>flipside</h5>
-        </div>
-        <div class="col-xs-6 col-md-4 projectItem">
-          <div class="image">
-            <img src="img/thinkcerca-logo-gray.png" alt="uprospie" height="70%;">
-          </div>
-          <h5>thinkCERCA</h5>
-        </div>
-        <div class="col-xs-6 col-md-4 projectItem">
-          <div class="image">
-            <img src="img/oca-logo-gray.png" alt="uprospie" height="90%">
-          </div>
-          <h5>OCA Ventures</h5>
-        </div>
-        <div class="col-xs-6 col-md-4 projectItem">
-          <div class="image">
-            <img src="img/ampush-logo-gray.png" alt="uprospie" height="50%;">
-          </div>
-          <h5>Ampush</h5>
-        </div>
       </div>
     </div>
-
-    <div class="work-section section">
-      <div class="row">
-        <div class="col-sm-8 title">
-          <h3>Non-profit</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-6 col-md-4 projectItem">
-          <div class="image">
-            <img src="img/thinkcerca-logo-gray.png" alt="uprospie" height="70%;">
-          </div>
-          <h5>moneythink</h5>
-        </div>
-        <div class="col-xs-6 col-md-4 projectItem">
-          <div class="image">
-            <img src="img/oca-logo-gray.png" alt="uprospie" height="90%">
-          </div>
-          <h5>edge launchpad</h5>
-        </div>
-        <div class="col-xs-6 col-md-4 projectItem">
-          <div class="image">
-            <img src="img/ampush-logo-gray.png" alt="uprospie" height="50%;">
-          </div>
-          <h5>enlighten chinese school</h5>
-        </div>
-      </div>
-    </div>
-
-    <div class="projectItem">
-      <h3 class="">
-        iReTron
-      </h3>
-      <h3 class="u-lighter">
-        iReTron is an e-commerce platform that refurbishes used electronics.
-      </h3>
-      <ul>
-        <li class="j-fontSize14"><b>Role:</b> Founder, 2011-</li>
-        <li><b>Things I learned:</b> HTML/CSS, PHP, SEO, Accounting, Customer Service, Marketing, B2B Sales </li>
-        <li><b>Watch our Shark Tank episode</b></li>
-      </ul>
-      <div class="fact">  </div>
-      <div class="fact"> <b>Role:</b> Founder, 2011- </div>
-      <div class="facts"> <b>Role:</b> Founder, 2011- </div>
-
-      <div class="">
-        lorem ipsum description
-      </div>
-    </div>
-
-
-
-
     <div class="me-section section">
       <div class="row">
         <div class="col-sm-6">
@@ -224,103 +168,21 @@
       </div>
     </div>
 
-
-
-    <style>
-    /* The Modal (background) */
-    .modal-content{
-      background-color: white;
-      bottom: 0;
-      box-shadow: 0.1rem 0.1rem 3rem rgba(0, 0, 0, 0.25);
-      color: black;
-      opacity: 1;
-      overflow-x: hidden;
-      overflow-y: scroll;
-      pointer-events: initial;
-      position: fixed;
-      right: 0;
-      width: 90rem;
-      top: 0;
-      z-index: 102;
-      display: block;
-      flex-wrap: wrap;
-    }
-
-    /* Modal Content */
-  /*  .modal-content {
-      padding-bottom: 3rem;
-      width: 95%;
-    } */
-
-    /* The Close Button */
-    .close {
-      color: #aaaaaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-    }
-
-    .close:hover,
-    .close:focus {
-      color: #000;
-      text-decoration: none;
-      cursor: pointer;
-    }
-    </style>
-  </head>
-  <body>
-
     <h2>Modal Example</h2>
 
     <!-- Trigger/Open The Modal -->
     <!-- The Modal -->
-    <div id="myModal" class="modal">
+    <div id="myModal" class="modal myModal">
       <!-- Modal content -->
       <div class="modal-content">
         <div class="close">&times;</div><br>
-        <p>Some text in the Modal. aalsdjf lasjdf klasdj fklsad jfslkd jfkslad fjksld fjkls dajkls dj.</p><br><br><br><br><br>
-        <p>Some text in the Modal..</p><br><br><br><br><br>
-        <p>Some text in the Modal..</p><br><br><br><br><br>
-        <p>Some text in the Modal..</p><br><br><br><br><br>
+        <div class="content-section">
 
-        <p>Some text in the Modal..</p><br><br><br><br><br>
-
-        <p>Some text in the Modal..</p><br><br><br><br><br>
-
-        <p>Some text in the Modal..</p><br><br><br><br><br>
-
+        </div>
       </div>
     </div>
 
     <button id="myBtn">Open Modal</button>
-
-    <script>
-    // Get the modal
-    var modal = document.getElementById('myModal');
-
-    // Get the button that opens the modal
-    var btn = document.getElementById("myBtn");
-
-    // Get the <span> element that closes the modal
-    var span = document.getElementsByClassName("close")[0];
-
-    // When the user clicks the button, open the modal
-    btn.onclick = function() {
-      modal.style.display = "block";
-    }
-
-    // When the user clicks on <span> (x), close the modal
-    span.onclick = function() {
-      modal.style.display = "none";
-    }
-
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function(event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
-    }
-    </script>
 
     <div class="contact-section section">
       <div class="row">
@@ -358,21 +220,18 @@
   <!-- Firebase script -->
   <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
 
-  <!--
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.10.8/esm/popper-utils.js"></script>
--->
-<!--vue.js scripts-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.js"></script>
-<script src="scripts/app.js"></script>
+  <!--vue.js scripts-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.js"></script>
+  <script src="scripts/app.js"></script>
 
-<script>
-// Google Analytics
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-97371368-1', 'auto');
-ga('send', 'pageview');
-</script>
+  <script>
+  // Google Analytics
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-97371368-1', 'auto');
+  ga('send', 'pageview');
+  </script>
 </body>
 </html>
