--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -51,7 +51,6 @@
         </div>
       </div>
     </div>
-
     <div class="work-section section">
       <div class="row">
         <div class="col-sm-8 title">
@@ -59,18 +58,22 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 col-sm-4 projectItem">
+        <a href="https://iretron.com" target="_blank">
+          <div class="col-xs-6 col-md-4 projectItem" href="https://codelabs.developers.google.com/codelabs/firebase-web/#7">
             <div class="image">
               <img src="img/iretron-logo-gray.png" alt="iretron" width="50%;">
             </div>
             <h5 class="projectLabel">iretron</h5>
-        </div>
-        <div class="col-xs-6 col-md-4 projectItem">
-          <div class="image">
-            <img src="img/uprospie-logo-gray.png" alt="uprospie" height="55%;">
           </div>
-          <h5 class="projectLabel">uprospie</h5>
-        </div>
+        </a>
+        <a href="https://iretron.com" target="_blank">
+          <div class="col-xs-6 col-md-4 projectItem">
+            <div class="image">
+              <img src="img/uprospie-logo-gray.png" alt="uprospie" height="55%;">
+            </div>
+            <h5 class="projectLabel">uprospie</h5>
+          </div>
+        </a>
         <div class="col-xs-6 col-md-4 projectItem">
           <div class="image">
             <img src="img/flipside-logo-gray.png" alt="uprospie" height="40%;">
@@ -87,7 +90,7 @@
           <div class="image">
             <img src="img/oca-logo-gray.png" alt="uprospie" height="90%">
           </div>
-          <h5 class="projectLabel">OCA Ventures</h5>
+          <h5>OCA Ventures</h5>
         </div>
         <div class="col-xs-6 col-md-4 projectItem">
           <div class="image">
@@ -97,141 +100,149 @@
         </div>
       </div>
     </div>
-
+    <!--
     <div class="work-section section">
-      <div class="row">
-        <div class="col-sm-8 title">
-          <h3>Non-profit</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-8">
-          <h3 class="company">iretron</h3>
-          <p>
-            it's not easy to go green, so I built an e-commerce website to buy and refurbish used electronics.
-            i went on the show shark tank and had my make up done for the first time. our corporate clients include at&t, verizon, and snapchat.
-          </p>
-        </div>
+    <div class="row">
+    <div class="col-sm-8 title">
+    <h3>Non-profit</h3>
+  </div>
+</div>
+<div class="row">
+<div class="col-sm-8">
+<h3 class="company">iretron</h3>
+<p>
+it's not easy to go green, so I built an e-commerce website to buy and refurbish used electronics.
+i went on the show shark tank and had my make up done for the first time. our corporate clients include at&t, verizon, and snapchat.
+</p>
+</div>
 
-        <div class="col-sm-8">
-          <h3 class="company">uprospie</h3>
-          <p>
-            volunteering at a high school in Chicago helped me understand the problem of undermatching, so I built a
-            marketplace to help students better access higher education and financial aid. We won $60K from pitch
-            competitions around the U.S. and had 10K monthly active users from 80+ campuses.
-          </p>
-        </div>
+<div class="col-sm-8">
+<h3 class="company">uprospie</h3>
+<p>
+volunteering at a high school in Chicago helped me understand the problem of undermatching, so I built a
+marketplace to help students better access higher education and financial aid. We won $60K from pitch
+competitions around the U.S. and had 10K monthly active users from 80+ campuses.
+</p>
+</div>
 
-        <div class="col-sm-8">
-          <h3 class="company">flipside</h3>
-          <p>
-            engaging in discourse online is a terrible experience so we're trying to improve it using NLP and good design.
-            we're still building this one out, but it's crazy cool and you should sign up for our beta!
-          </p>
-        </div>
+<div class="col-sm-8">
+<h3 class="company">flipside</h3>
+<p>
+engaging in discourse online is a terrible experience so we're trying to improve it using NLP and good design.
+we're still building this one out, but it's crazy cool and you should sign up for our beta!
+</p>
+</div>
 
-        <div class="col-sm-8">
-          <h3 class="company">thinkcerca</h3>
-          <p>
-            thinkcerca is an edtech company that teaches critical thinking through argumentative writing. I helped redesign
-            UI/UX for teachers, built an efficacy visualizer using python for the sales team, and helped create the pitch deck for series B
-          </p>
-        </div>
+<div class="col-sm-8">
+<h3 class="company">thinkcerca</h3>
+<p>
+thinkcerca is an edtech company that teaches critical thinking through argumentative writing. I helped redesign
+UI/UX for teachers, built an efficacy visualizer using python for the sales team, and helped create the pitch deck for series B
+</p>
+</div>
 
-        <div class="col-sm-8">
-          <h3 class="company">oca ventures</h3>
-          <p>
-            OCA Ventures is a $250MM venture capital fund. I screened companies and pitched genvid to the rest of the team (the deal went through !!).
-            I also made 2 kill calls during my time here and it was absolutely heartbreaking. 0/10 would not recommend.
-          </p>
-        </div>
+<div class="col-sm-8">
+<h3 class="company">oca ventures</h3>
+<p>
+OCA Ventures is a $250MM venture capital fund. I screened companies and pitched genvid to the rest of the team (the deal went through !!).
+I also made 2 kill calls during my time here and it was absolutely heartbreaking. 0/10 would not recommend.
+</p>
+</div>
 
-        <div class="col-sm-8">
-          <h3 class="company">ampush</h3>
-          <p>
-            Ampush is a Growth Marketing and Digital Strategy agency. I ran and analyzed native facebook ads for uber, eventbrite, and rdio.
+<div class="col-sm-8">
+<h3 class="company">ampush</h3>
+<p>
+Ampush is a Growth Marketing and Digital Strategy agency. I ran and analyzed native facebook ads for uber, eventbrite, and rdio.
 
-            OCA Ventures is a $250MM venture capital fund. I screened companies and am happy that a deal I screened actually got funding!
-            I also made 2 kill calls during my time here and it was absolutely heartbreaking. 0/10 would not recommend.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="me-section section">
-      <div class="row">
-        <div class="col-sm-6">
-          <h2>me</h2>
-        </div>
-        <div class="col-sm-6">
-          <h3>I like meeting people, writing, taking pictures, and building things.</h3>
-        </div>
-      </div>
-    </div>
+OCA Ventures is a $250MM venture capital fund. I screened companies and am happy that a deal I screened actually got funding!
+I also made 2 kill calls during my time here and it was absolutely heartbreaking. 0/10 would not recommend.
+</p>
+</div>
+</div>
+</div> -->
 
-    <h2>Modal Example</h2>
 
-    <!-- Trigger/Open The Modal -->
-    <!-- The Modal -->
-    <div id="myModal" class="modal myModal">
-      <!-- Modal content -->
-      <div class="modal-content">
-        <div class="close">&times;</div><br>
-        <div class="content-section">
+<div class="me-section section">
 
-        </div>
+  <div class="row ">
+    <div class="col-md-12">
+      <div class="u-floatRight">
+        <h2>I also like <span href="#" class="pageLink takingpictures">taking pictures</span> and <span href="#" class="pageLink writing">writing</span></h2>
       </div>
     </div>
-
-    <button id="myBtn">Open Modal</button>
-
-    <div class="contact-section section">
-      <div class="row">
-        <div class="col-md-5">
-          <h2>let's talk</h2>
-        </div>
-
-        <div class="col-md-7">
-          <form class="contactForm" action="index.html" method="post">
-            <div class="name inputGroup">
-              <label for="name">name: </label>
-              <input type="text" name="" value="">
-            </div>
-            <div class="email inputGroup">
-              <label for="email">email: </label>
-              <input type="email" name="" value="">
-            </div>
-            <div class="message inputGroup">
-              <label for="message">message: </label>
-              <textarea type="text" rows="4" name="" value=""></textarea>
-            </div>
-
-          </form>
-        </div>
-
+  </div><br>
+  <div class="row ">
+    <div class="col-md-12">
+      <div class="u-floatRight">
+        <h3>email me at <span class="myemail">jasonli2310@gmail.com</span></h3>
+        <h3></h3>
       </div>
-
     </div>
   </div>
+</div>
 
-  <!-- JQuery and Bootstrap core JS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!-- Trigger/Open The Modal -->
+<!-- The Modal -->
+<!-- <div id="myModal" class="modal myModal"> -->
+  <!-- Modal content -->
+  <!-- <div class="modal-content">
+    <div class="close">&times;</div><br>
+    <div class="content-section">
+      hello there
+    </div>
+  </div>
+</div>
 
-  <!-- Firebase script -->
-  <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
+<button id="myBtn">Open Modal</button> -->
 
-  <!--vue.js scripts-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.js"></script>
-  <script src="scripts/app.js"></script>
+<!-- <div class="contact-section section">
+  <div class="row">
+    <div class="col-md-5">
+      <h2>let's talk</h2>
+    </div>
 
-  <script>
-  // Google Analytics
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-97371368-1', 'auto');
-  ga('send', 'pageview');
-  </script>
+    <div class="col-md-7">
+      <form class="contactForm" action="index.html" method="post">
+        <div class="name inputGroup">
+          <label for="name">name: </label>
+          <input type="text" name="" value="">
+        </div>
+        <div class="email inputGroup">
+          <label for="email">email: </label>
+          <input type="email" name="" value="">
+        </div>
+        <div class="message inputGroup">
+          <label for="message">message: </label>
+          <textarea type="text" rows="4" name="" value=""></textarea>
+        </div>
+
+      </form>
+    </div>
+
+  </div>
+
+</div> -->
+</div>
+
+<!-- JQuery and Bootstrap core JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<!-- Firebase script -->
+<script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
+
+<!--vue.js scripts-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.js"></script>
+<script src="scripts/app.js"></script>
+
+<script>
+// Google Analytics
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-97371368-1', 'auto');
+ga('send', 'pageview');
+</script>
 </body>
 </html>
