--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -66,7 +66,7 @@
             <h5 class="projectLabel">iretron</h5>
           </div>
         </a>
-        <a href="https://iretron.com" target="_blank">
+        <a href="https://medium.com/@jasonzli/a-design-brief-of-uprospie-61af10d153a0" target="_blank">
           <div class="col-xs-6 col-md-4 projectItem">
             <div class="image">
               <img src="img/uprospie-logo-gray.png" alt="uprospie" height="55%;">
@@ -74,30 +74,38 @@
             <h5 class="projectLabel">uprospie</h5>
           </div>
         </a>
+        <a href="https://www.flipsidetalk.com/" target="_blank">
         <div class="col-xs-6 col-md-4 projectItem">
           <div class="image">
             <img src="img/flipside-logo-gray.png" alt="uprospie" height="40%;">
           </div>
           <h5 class="projectLabel">flipside</h5>
         </div>
+      </a>
+      <a href="https://thinkcerca.com/" target="_blank">
         <div class="col-xs-6 col-md-4 projectItem">
           <div class="image">
             <img src="img/thinkcerca-logo-gray.png" alt="uprospie" height="70%;">
           </div>
           <h5 class="projectLabel">thinkCERCA</h5>
         </div>
+      </a>
+      <a href="http://www.ocaventures.com/" target="_blank">
         <div class="col-xs-6 col-md-4 projectItem">
           <div class="image">
             <img src="img/oca-logo-gray.png" alt="uprospie" height="90%">
           </div>
           <h5>OCA Ventures</h5>
         </div>
+      </a>
+      <a href="http://www.ampush.com/" target="_blank">
         <div class="col-xs-6 col-md-4 projectItem">
           <div class="image">
             <img src="img/ampush-logo-gray.png" alt="uprospie" height="50%;">
           </div>
           <h5 class="projectLabel">Ampush</h5>
         </div>
+      </a>
       </div>
     </div>
     <!--
@@ -167,14 +175,14 @@ I also made 2 kill calls during my time here and it was absolutely heartbreaking
   <div class="row ">
     <div class="col-md-12">
       <div class="u-floatRight">
-        <h2>I also like <span href="#" class="pageLink takingpictures">taking pictures</span> and <span href="#" class="pageLink writing">writing</span></h2>
+        <h3>I also like <a href="https://www.instagram.com/jasonhasfun/" target="_blank" class="pageLink takingpictures">taking pictures</a> and <a href="https://medium.com/@jasonzli" target="_blank" class="pageLink writing">writing</a></h3>
       </div>
     </div>
-  </div><br>
+  </div>
   <div class="row ">
     <div class="col-md-12">
       <div class="u-floatRight">
-        <h3>email me at <span class="myemail">jasonli2310@gmail.com</span></h3>
+        <h3>you can email me at jasonli2310@gmail.com</h3>
         <h3></h3>
       </div>
     </div>
