--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,6 +2,17 @@
 BODY CONTENT
 *************************/
 
+a{
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover{
+  color: inherit;
+  text-decoration: none;
+}
+
+
 .h2{
   font-size: 1.5rem;
 }
