--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -201,15 +201,14 @@ I also made 2 kill calls during my time here and it was absolutely heartbreaking
   <div class="row ">
     <div class="col-md-12">
       <div class="u-floatRight">
-        <h3>I also like <a href="https://www.instagram.com/jasonhasfun/" target="_blank" class="pageLink takingpictures">taking pictures</a> and <a href="https://medium.com/@jasonzli" target="_blank" class="pageLink writing">writing</a></h3>
+        <h3>I also like <a href="https://www.instagram.com/_jasonzli/" target="_blank" class="pageLink takingpictures">taking pictures</a> and <a href="https://medium.com/@jasonzli" target="_blank" class="pageLink writing">writing</a></h3>
       </div>
     </div>
   </div>
   <div class="row ">
     <div class="col-md-12">
       <div class="u-floatRight">
-        <h3>you can email me at jasonli2310@gmail.com</h3>
-        <h3></h3>
+        <h3>you can chat me or email me at jasonli2310@gmail.com</h3>
       </div>
     </div>
   </div>
