--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -24,7 +24,7 @@
   <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <meta property="og:image" content="http://www.flipsidetalk.com/img/handshake.jpg"/>
-  <meta name="description" content="Creating civil discourse by presenting curated articles from different viewpoints.">
+  <meta name="description" content="you found it !">
   <meta property="og:title" content="Flipside — A new side of news" />
   <!-- Bootstrap core CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
