--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -36,6 +36,29 @@
   <link href="styles/main.css" rel="stylesheet">
   <title>jason</title>
 
+  <script type="text/javascript">
+(function() {
+  var didInit = false;
+  function initMunchkin() {
+    if(didInit === false) {
+      didInit = true;
+      Munchkin.init('844-RKG-112');
+    }
+  }
+  var s = document.createElement('script');
+  s.type = 'text/javascript';
+  s.async = true;
+  s.src = '//munchkin.marketo.net/munchkin.js';
+  s.onreadystatechange = function() {
+    if (this.readyState == 'complete' || this.readyState == 'loaded') {
+      initMunchkin();
+    }
+  };
+  s.onload = initMunchkin;
+  document.getElementsByTagName('head')[0].appendChild(s);
+})();
+</script>
+
   <!-- Start of Async Drift Code -->
 <script>
 !function() {
@@ -73,7 +96,7 @@ drift.load('7kh52p6n4k6s');
       </div>
       <div class="row">
         <div class="col-md-8">
-          <h2>student of uchicago economics, computer science, and product design</h2>
+          <h2>building product, studying economics</h2>
         </div>
       </div>
     </div>
