added qa snippet

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -59,8 +59,8 @@
 })();
 </script>
 
-  <!-- Start of Async Drift Code -->
-<script>
+  <!-- Start of Async Drift Code JASONS ACTUAL ORG-->
+<!-- <script>
 !function() {
   var t;
   if (t = window.driftt = window.drift = window.driftt || [], !t.init) return t.invoked ? void (window.console && console.error && console.error("Drift snippet included twice.")) : (t.invoked = !0,
@@ -81,6 +81,35 @@
 }();
 drift.SNIPPET_VERSION = '0.3.1';
 drift.load('7kh52p6n4k6s');
+</script> -->
+<!-- End of Async Drift Code -->
+
+<!-- Start of Async Drift Code -->
+<script>
+"use strict";
+
+!function() {
+  var t = window.driftt = window.drift = window.driftt || [];
+  if (!t.init) {
+    if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+    t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ],
+    t.factory = function(e) {
+      return function() {
+        var n = Array.prototype.slice.call(arguments);
+        return n.unshift(e), t.push(n), t;
+      };
+    }, t.methods.forEach(function(e) {
+      t[e] = t.factory(e);
+    }), t.load = function(t) {
+      var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+      var i = document.getElementsByTagName("script")[0];
+      i.parentNode.insertBefore(o, i);
+    };
+  }
+}();
+drift.SNIPPET_VERSION = '0.3.1';
+drift.load('dssxhgnt2u6n-dev');
 </script>
 <!-- End of Async Drift Code -->
 
@@ -234,6 +263,11 @@ I also made 2 kill calls during my time here and it was absolutely heartbreaking
         <h3>you can chat me or email me at jasonli2310@gmail.com</h3>
       </div>
     </div>
+
+
+    <script src="//app-ab10.marketo.com/js/forms2/js/forms2.min.js"></script>
+<form id="mktoForm_1005"></form>
+<script>MktoForms2.loadForm("//app-ab10.marketo.com", "844-RKG-112", 1005);</script>
   </div>
 </div>
 
