adding miro's code

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -85,6 +85,7 @@ drift.load('7kh52p6n4k6s');
 <!-- End of Async Drift Code -->
 
 <!-- Start of Async Drift Code -->
+<!-- Start of Async Drift Code -->
 <script>
 "use strict";
 
@@ -109,10 +110,9 @@ drift.load('7kh52p6n4k6s');
   }
 }();
 drift.SNIPPET_VERSION = '0.3.1';
-drift.load('dssxhgnt2u6n-dev');
+drift.load('d8it9c576ga4-dev');
 </script>
 <!-- End of Async Drift Code -->
-
 </head>
 
 <body>  <!--BEGIN CONTENT BODY-->
