--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -103,7 +103,7 @@ drift.load('7kh52p6n4k6s');
       t[e] = t.factory(e);
     }), t.load = function(t) {
       var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftqa.com/include/" + n + "/" + t + ".js";
       var i = document.getElementsByTagName("script")[0];
       i.parentNode.insertBefore(o, i);
     };
